# discord-py-example

./: .gitignore  README.md  main.py  pyproject.toml
examples/app_commands/: basic_option.py  built_in_transformers.py
